Dynami Component Loading
1. Dynamic Component Loading

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <tm-root></tm-root>
+  <tm-root>
+    <h1>Loading...</h1>
+  </tm-root>
 </body>
 </html>
